Created assignment with scaffolding, added user model/controller/views, added custom server-side validation messages

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SD2_WS2_Annotation_AssignmentContext": "Server=(localdb)\\mssqllocaldb;Database=SD2_WS2_Annotation_AssignmentContext-1d612cff-707a-49b5-bb3b-fe08d5c4264b;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
